# IK2221-GPU-Inferencing-Project

./: .gitignore  README.md  Report.tex  TASK1_README.md  TASK2_README.md  TASK3_README.md  TASK4_README.md  TODO.md  pyproject.toml  report.tex
LMCache/: setup.py
LMCache/lmcache/: logging.py
lmcache-server/: README.md  setup.py
lmcache-server/lmcache_server/: server.py
lmcache-server/lmcache_server/storage_backend/: local_backend.py
lmcache-vllm-extended/: .gitignore  README.md  configuration.yaml  requirements.txt  setup.py
lmcache-vllm-extended/docker/: chat-template.txt  example.yaml
lmcache-vllm-extended/frontend/: README.md  batch_scheduler.py  benchmark.py  chat_session.py  cli.py  frontend.py  plot_q2.py  plot_q2_summary.py  request_generator.py
lmcache-vllm-extended/frontend/additionaldata/: fluid-guided-llm.txt  multi-node.txt  neo-cpu-offloading.txt  nfv-at-edge.txt  nfv-platforms.txt  online-scheduling-jaillet.txt  optimal-nfv-packetprocessing.txt  prefix-output-aware.txt  robust-online-composition.txt  survey-efficient.txt
lmcache-vllm-extended/frontend/data/: IK2221_Paper2.txt  IK2221_paper1.txt  IK2221_paper10.txt  IK2221_paper11.txt  IK2221_paper12.txt  IK2221_paper3.txt  IK2221_paper4.txt  IK2221_paper5.txt  IK2221_paper6.txt  IK2221_paper7.txt  IK2221_paper8.txt  IK2221_paper9.txt  ServerlessLLM_summary.txt  SplitRPC-sigmetrics23.txt  aplomb-sigcomm12.txt  cacheblend.txt  (+10 more)
lmcache-vllm-extended/lmcache_vllm/: __init__.py  blend_adapter.py  custom_api.py  lmcache_utils.py  vllm_adapter.py  vllm_injection.py
scripts/: setup.sh  start.sh
(+42 files in other folders)
